City, Item, ItemFile, Lender, RentalRecipt(미완성) 더미데이터 생성

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # DDL(create, alter, drop) 정의시 DB의 고유 기능을 사용할 수 있다.
 # create: 서버 가동할때마다 기존 테이블을 삭제하고 새로 생성
 # update: DB테이블와 엔티티 매핑정보를 비교해서 변경사항이 있는 경우만 수정 (ALTER). 테이블 없으면 CREATE
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # 파일 업로드 경로
 app.upload.path=upload
