--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,9 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 # 파일 업로드 경로
-app.upload.path=upload
+app.camp.upload.path=upload/camp
+
+app.item.upload.path=upload/item
 
 
 
